# gestao-turnos

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  prd_gestao_turnos_v2.md  pyproject.toml  requirements.txt  test_regex.py
app/: config.py  (+9 more)
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: ARCHITECTURE.md  caldav_client.py  config.py  crud.py  main.py  models.py  reports.py  run_all.py
backend/app/api/: deps.py  health.py  pages.py  webhook.py
backend/app/api/routers/: assinaturas.py  auth.py  relatorios.py  turnos.py  usuarios.py
backend/app/application/dtos/: caldav_sync_dto.py
backend/app/application/use_cases/: __init__.py
backend/app/core/: config.py  security.py
backend/app/domain/: uow.py
backend/app/infrastructure/: background_adapter.py  middleware.py  subscription_middleware.py
backend/app/presentation/: schemas.py
backend/app/services/: stripe_service.py
backend/migrations/: env.py
backend/migrations/versions/: 77905a838e45_create_signatures_table.py
backend/tests/: conftest.py  test_auth_integration.py  test_concurrency_turnos.py  test_config.py  test_crud.py  test_pdf_auth.py  test_profile_plan.py  test_repositories.py  test_rls_isolation.py  test_schemas.py  test_stripe_integration.py  test_subscription_lifecycle.py  test_trial_logic.py
backend/tests/unit/: test_criar_turno_premium_check.py  test_criar_turno_use_case.py
bot/: Dockerfile  pyproject.toml
bot/src/: api_client.py  bot.py  config.py  decorators.py  main.py  parsers.py  utils.py
bot/src/handlers/: commands.py  menu.py  onboarding.py  relatorios.py  turnos.py
bot/tests/: test_api_client.py  test_commands.py  test_handlers_menu.py  test_handlers_onboarding.py  test_handlers_relatorios.py  test_handlers_turnos.py  test_parsers.py  test_rate_limit.py
(+97 files in other folders)
