[project]
name = "gestao-turnos"
version = "0.1.0"
description = "Sistema de gestão de turnos de trabalho via Telegram Bot"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "caldav>=2.1.2",
    "fastapi>=0.123.3",
    "httpx>=0.28.1",
    "icalendar>=6.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "reportlab>=4.4.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
