[project]
name = "gestao-turnos"
version = "0.1.0"
description = "Sistema de gestão de turnos de trabalho via Telegram Bot"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "caldav>=2.1.2",
    "fastapi>=0.123.3",
    "httpx>=0.28.1",
    "icalendar>=6.3.2",
    "psycopg>=3.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "reportlab>=4.4.5",
    "sqlalchemy>=2.0.44",
    "stripe>=14.0.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

